<resources>
    <string name="app_name">RickMorty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LostInternet">Нестабильное соединение</string>

    <!-- NAMES TOOLBAR -->
    <string name="locations">Локации</string>
    <string name="episodes">ЭПИЗОДЫ</string>
    <string name="characters">ПЕРСОНАЖИ</string>

    <string name="search_input_text">Search</string>

    <!-- CHARACTER INFO -->
    <string name="character_name">Rick Sanchez</string>
    <string name="gender">gender:</string>
    <string name="gender_value">male</string>
    <string name="species">species:</string>
    <string name="species_value">human</string>
    <string name="location">location:</string>
    <string name="location_value">Citadel of Rick</string>

    <!-- EPISODE INFO -->
    <string name="name_episode">Pilot</string>
    <string name="air_date">air date:</string>
    <string name="air_date_value">unknow</string>
    <string name="number_episode">S01E01</string>

    <!-- LOCATION INFO -->
    <string name="name_planet">Planeta</string>
    <string name="type">type:</string>
    <string name="type_location_value">unknow</string>
    <string name="dimension">dimension:</string>
    <string name="dimension_location_value">unknow</string>

</resources>