<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:paddingVertical="16dp">

    <ImageView
        android:id="@+id/ivImageItem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/image_item"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/tvName"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="1.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvName"
        style="@style/CustomItemNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/character_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/ivImageItem"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGender"
        style="@style/CustomItemDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gender"

        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvGenderEdit"
        style="@style/CustomItemDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/gender_value"
        app:layout_constraintStart_toEndOf="@+id/tvGender"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvSpecies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/species"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/tvGender"
        app:layout_constraintTop_toBottomOf="@+id/tvGender" />

    <TextView
        android:id="@+id/tvSpeciesEdit"
        style="@style/CustomItemDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/species_value"
        app:layout_constraintStart_toEndOf="@+id/tvSpecies"
        app:layout_constraintTop_toBottomOf="@+id/tvGenderEdit" />

    <TextView
        android:id="@+id/tvLocation"
        style="@style/CustomItemDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="@+id/tvSpecies"
        app:layout_constraintTop_toBottomOf="@+id/tvSpecies" />

    <TextView
        android:id="@+id/tvLocationEdit"
        style="@style/CustomItemDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/location_value"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toEndOf="@+id/tvLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvSpeciesEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>