<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:paddingVertical="16dp">

    <View
        android:id="@+id/shape"
        android:layout_width="6dp"
        android:layout_height="0dp"
        android:background="@color/rapeYellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        style="@style/CustomItemNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/name_planet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shape"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvType"
        style="@style/CustomItemDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvTypeEdit"
        style="@style/CustomItemDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/type_location_value"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toEndOf="@+id/tvType"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvDimension"
        style="@style/CustomItemDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dimension"
        app:layout_constraintStart_toStartOf="@+id/tvType"
        app:layout_constraintTop_toBottomOf="@+id/tvType" />

    <TextView
        android:id="@+id/tvDimensionEdit"
        style="@style/CustomItemDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/dimension_location_value"
        app:layout_constraintEnd_toEndOf="@+id/tvTypeEdit"
        app:layout_constraintStart_toEndOf="@+id/tvDimension"
        app:layout_constraintTop_toBottomOf="@+id/tvTypeEdit" />


</androidx.constraintlayout.widget.ConstraintLayout>