<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.home.HomeFragment"
    android:background="@color/blue_dark">

    <ImageView
        android:id="@+id/iwIconRickAndMorty"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_rickandmorty" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCharacter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomHomeButton"
        android:text="@string/characters"
        android:layout_marginHorizontal="25dp"
        app:icon="@drawable/ic_character"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/CustomHomeButton"
        android:text="@string/locations"
        app:icon="@drawable/ic_world"
        app:layout_constraintEnd_toEndOf="@+id/btnCharacter"
        app:layout_constraintStart_toStartOf="@+id/btnCharacter"
        app:layout_constraintTop_toBottomOf="@+id/btnCharacter" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEpisode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/CustomHomeButton"
        android:text="@string/episodes"
        app:icon="@drawable/ic_television"
        app:layout_constraintEnd_toEndOf="@+id/btnCharacter"
        app:layout_constraintStart_toStartOf="@+id/btnCharacter"
        app:layout_constraintTop_toBottomOf="@+id/btnLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>